ADFFACES-487: Change Component generator to us XXX.valueOf(x) instead of new XXX(x) when converting between primitives to Objects in components